Blender Crash With B select on Skeleton Sketching #49148

Closed
opened 2016-08-23 13:35:29 +02:00 by YAFU · 4 comments

System Information
Kubuntu Linux 14.04 64bits - GTX 960

Blender Version
Broken: Blender 2.77a, from buildbot eb2ee72

Short description of error
Hi.
I just found out about the existence of Skeleton Sketching feature, so experimenting I found this bug. When you draw a skeleton and you then try to select a region of the drawing with 'B', Blender crash. I do not even know if it was possible to select something that way, as I had said before I'm just experimenting with this feature.

Exact steps for others to reproduce the error
Skeleton Sketching B select.blend

Open the .blend file I shared. Draw some strokes with LMB. Discontinue drawing with RMB. Press 'B' key and try to select a region that contains the drawing. Blender Crash.
Skeleton Sketching B select.crash.txt

PS: By the way, I had tried to save the .blend file with the drawing included, Blender does not save the drawing. Should it be that way?

**System Information** Kubuntu Linux 14.04 64bits - GTX 960 **Blender Version** Broken: Blender 2.77a, from buildbot eb2ee72 **Short description of error** Hi. I just found out about the existence of Skeleton Sketching feature, so experimenting I found this bug. When you draw a skeleton and you then try to select a region of the drawing with 'B', Blender crash. I do not even know if it was possible to select something that way, as I had said before I'm just experimenting with this feature. **Exact steps for others to reproduce the error** [Skeleton Sketching B select.blend](https://archive.blender.org/developer/F341726/Skeleton_Sketching_B_select.blend) Open the .blend file I shared. Draw some strokes with LMB. Discontinue drawing with RMB. Press 'B' key and try to select a region that contains the drawing. Blender Crash. [Skeleton Sketching B select.crash.txt](https://archive.blender.org/developer/F341727/Skeleton_Sketching_B_select.crash.txt) PS: By the way, I had tried to save the .blend file with the drawing included, Blender does not save the drawing. Should it be that way?
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

This issue was referenced by 0ca4e39424

This issue was referenced by 0ca4e3942427ad294428ba1b8db2cafe3bbdf5d6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49148
No description provided.