Fix T49148: Blender Crash With B select on Skeleton Sketching